// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`connections should count gauges 1`] = `
Object {
  "sources": Object {
    "count": 7,
    "nodes": Array [
      Object {
        "gauges": Object {
          "count": 0,
        },
        "id": "1628c0a2-1a0a-11e8-accf-0ed5f89f718b",
        "name": "Alps",
      },
      Object {
        "gauges": Object {
          "count": 0,
        },
        "id": "ce81ed89-5558-49d1-86f6-1fa8bcd944bb",
        "name": "Empty",
      },
      Object {
        "gauges": Object {
          "count": 2,
        },
        "id": "6d0d717e-aa9d-11e7-abc4-cec278b6b50a",
        "name": "Galicia",
      },
      Object {
        "gauges": Object {
          "count": 2,
        },
        "id": "9f962a34-bff9-11e7-abc4-cec278b6b50a",
        "name": "Galicia2",
      },
      Object {
        "gauges": Object {
          "count": 4,
        },
        "id": "53af1a54-19fe-11e8-accf-0ed5f89f718b",
        "name": "Georgia",
      },
      Object {
        "gauges": Object {
          "count": 4,
        },
        "id": "786251d4-aa9d-11e7-abc4-cec278b6b50a",
        "name": "Norway",
      },
      Object {
        "gauges": Object {
          "count": 1,
        },
        "id": "8e37e9d2-1d7b-11e8-b467-0ed5f89f718b",
        "name": "Россия",
      },
    ],
  },
}
`;

exports[`connections should count regions 1`] = `
Object {
  "sources": Object {
    "count": 7,
    "nodes": Array [
      Object {
        "id": "1628c0a2-1a0a-11e8-accf-0ed5f89f718b",
        "name": "Alps",
        "regions": Object {
          "count": 0,
        },
      },
      Object {
        "id": "ce81ed89-5558-49d1-86f6-1fa8bcd944bb",
        "name": "Empty",
        "regions": Object {
          "count": 0,
        },
      },
      Object {
        "id": "6d0d717e-aa9d-11e7-abc4-cec278b6b50a",
        "name": "Galicia",
        "regions": Object {
          "count": 2,
        },
      },
      Object {
        "id": "9f962a34-bff9-11e7-abc4-cec278b6b50a",
        "name": "Galicia2",
        "regions": Object {
          "count": 1,
        },
      },
      Object {
        "id": "53af1a54-19fe-11e8-accf-0ed5f89f718b",
        "name": "Georgia",
        "regions": Object {
          "count": 1,
        },
      },
      Object {
        "id": "786251d4-aa9d-11e7-abc4-cec278b6b50a",
        "name": "Norway",
        "regions": Object {
          "count": 1,
        },
      },
      Object {
        "id": "8e37e9d2-1d7b-11e8-b467-0ed5f89f718b",
        "name": "Россия",
        "regions": Object {
          "count": 0,
        },
      },
    ],
  },
}
`;

exports[`data should list sources 1`] = `
Array [
  Object {
    "cron": "10 * * * *",
    "enabled": true,
    "id": "1628c0a2-1a0a-11e8-accf-0ed5f89f718b",
    "name": "Alps",
    "requestParams": null,
    "script": "alps",
    "url": "http://yandex.ru",
  },
  Object {
    "cron": null,
    "enabled": false,
    "id": "ce81ed89-5558-49d1-86f6-1fa8bcd944bb",
    "name": "Empty",
    "requestParams": Object {
      "foo": "bar",
    },
    "script": "empty",
    "url": null,
  },
  Object {
    "cron": "0 * * * *",
    "enabled": true,
    "id": "6d0d717e-aa9d-11e7-abc4-cec278b6b50a",
    "name": "Galicia",
    "requestParams": null,
    "script": "galicia",
    "url": "http://ya.ru",
  },
  Object {
    "cron": null,
    "enabled": true,
    "id": "9f962a34-bff9-11e7-abc4-cec278b6b50a",
    "name": "Galicia2",
    "requestParams": null,
    "script": "galicia2",
    "url": "http://yandex.ru",
  },
  Object {
    "cron": null,
    "enabled": false,
    "id": "53af1a54-19fe-11e8-accf-0ed5f89f718b",
    "name": "Georgia",
    "requestParams": null,
    "script": "one_by_one",
    "url": null,
  },
  Object {
    "cron": null,
    "enabled": true,
    "id": "786251d4-aa9d-11e7-abc4-cec278b6b50a",
    "name": "Norway",
    "requestParams": null,
    "script": "norway",
    "url": null,
  },
  Object {
    "cron": null,
    "enabled": false,
    "id": "8e37e9d2-1d7b-11e8-b467-0ed5f89f718b",
    "name": "Россия",
    "requestParams": Object {
      "foo": "bar",
    },
    "script": "russia",
    "url": null,
  },
]
`;
